# tanks

./: .gitignore  Cargo.toml  README.md  tanks.old.tar
ready/res/config/: tank.ron
ready/res/sprites/: tanks.ron
res/colors/: base.ron  bay.ron  cream.ron  dark.ron  default.ron  light.ron  neon.ron
res/config/: _spawn.ron  beamer.ron  bindings.ron  cannon.ron  destroy.ron  display.ron  maze.ron  performance.ron  raze.ron  tank.ron
res/shaders/: compile.sh  shapes.frag  shapes.vert  sprite.frag  sprite.vert
res/shaders/compiled/: shapes.frag.spv  shapes.vert.spv  sprite.frag.spv  sprite.vert.spv
res/sprites/: spawns.ron  tanks.ron
res/ui/: loading_text.ron  main_menu_text.ron
resources/: bullet_conf.ron  input_conf.ron  tank_conf.ron
resources/sprites/: tanks.ron  tanks.xcf
src/: config.rs  input.rs  level.rs  main.rs  markers.rs  mazegen.rs  phsystem.rs  physics.rs  projectile.rs  remove.rs  scoreboard.rs  state.rs  tank.rs  utils.rs  weapons.rs
src/graphics/: flat2d.rs  mod.rs  pod.rs  shapes.rs
src/physics/: mod.rs  systems.rs
src/states/: gameplay.rs  loading.rs  mainmenu.rs  mod.rs  tankselect.rs
src/systems/: _rocket.rs  _spawn.rs  beamer.rs  camshake.rs  cannon.rs  color.rs  destroy.rs  level.rs  mod.rs  rocket.rs  spawn.rs  tank.rs  weapon.rs
src/systems/classes/: mod.rs  raze.rs
src/utils/: color.rs  mazegen.rs  mod.rs
src/weapons/: mod.rs
