[package]
name = "tanks"
version = "0.1.5"
authors = ["Antoni Simka <antonisimka.8@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4.8", features = ["serde"] }
serde = "1.0.105"
rand = "0.7.3"

[dependencies.specs-physics]
git = "https://github.com/distransient/specs-physics.git"
branch = "0.4.0"
default-features = false
features=["dim2", "amethyst"]

[dependencies.amethyst]
git = "https://github.com/amethyst/amethyst.git"
features = ["vulkan"]
